[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI-Sprite/map-bg-menu.png" type="Texture" id=1]
[ext_resource path="res://UI-Sprite/map_layer.png" type="Texture" id=2]
[ext_resource path="res://UI-Sprite/map_layer_hover.png" type="Texture" id=3]
[ext_resource path="res://Map-Sprites/Background/Yellow.png" type="Texture" id=4]
[ext_resource path="res://Fonts/fontsetting.tres" type="DynamicFont" id=5]
[ext_resource path="res://Map-Sprites/Background/Green.png" type="Texture" id=6]
[ext_resource path="res://Map-Sprites/Background/Gray.png" type="Texture" id=7]
[ext_resource path="res://UI/Mapselecter.gd" type="Script" id=8]
[ext_resource path="res://UI-Sprite/Button_hover.png" type="Texture" id=9]
[ext_resource path="res://UI-Sprite/Button_normal.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[node name="Mapselecter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Backbutton" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 150.0
margin_bottom = 50.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="Backbutton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "BACK"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -235.0
margin_right = 288.0
margin_bottom = 235.0

[node name="Map1button" type="TextureButton" parent="VBoxContainer"]
margin_right = 576.0
margin_bottom = 154.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Map1button"]
margin_left = 6.0
margin_top = 7.0
margin_right = 380.0
margin_bottom = 147.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
flip_h = true

[node name="Mapname" type="Label" parent="VBoxContainer/Map1button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -12.5
margin_right = -17.0
margin_bottom = 26.5
custom_fonts/font = ExtResource( 5 )
text = "Map 1"

[node name="Map2button" type="TextureButton" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 576.0
margin_bottom = 312.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Map2button"]
margin_left = 6.0
margin_top = 7.0
margin_right = 380.0
margin_bottom = 147.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
flip_h = true

[node name="Mapname" type="Label" parent="VBoxContainer/Map2button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -12.5
margin_right = -17.0
margin_bottom = 26.5
custom_fonts/font = ExtResource( 5 )
text = "Map 2"

[node name="Map3button" type="TextureButton" parent="VBoxContainer"]
margin_top = 316.0
margin_right = 576.0
margin_bottom = 470.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Map3button"]
margin_left = 6.0
margin_top = 7.0
margin_right = 380.0
margin_bottom = 147.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
flip_h = true

[node name="Mapname" type="Label" parent="VBoxContainer/Map3button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -12.5
margin_right = -17.0
margin_bottom = 26.5
custom_fonts/font = ExtResource( 5 )
text = "Map 3"

[connection signal="pressed" from="Backbutton" to="." method="_on_Backbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Map1button" to="." method="_on_Map1button_pressed"]
[connection signal="pressed" from="VBoxContainer/Map2button" to="." method="_on_Map2button_pressed"]
[connection signal="pressed" from="VBoxContainer/Map3button" to="." method="_on_Map3button_pressed"]
